<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        style="@style/cardText"
        android:id="@+id/content"
        android:textSize="@dimen/card_header"
        android:textStyle="bold|italic" />
    <View style="@style/underline" />
</LinearLayout>
