<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/item_detail_holder"
    tools:ignore="MergeRootFrame">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/media_holder"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/divider_margin"
            android:layout_height="@dimen/video_height">
            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/playerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ItemDetailFragment" />
            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>
        <TextView
            style="@style/cardText"
            android:id="@+id/detail_fragment_content"
            android:textSize="@dimen/card_header"
            android:textStyle="bold|italic" />
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchorGravity="bottom|start"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@android:drawable/ic_media_next" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>

